Add more hashes
Add bruteforcing method
Print bin hashes after extracting